# rasa-openstack-persistor

./: .gitignore  README.md  pyproject.toml
rasa_openstack_persistor/: OpenStackPersistor.py  __init__.py
tests/: test_rasa_openstack_persistor.py
